src/objects/FMA_Account_Note__c.object
<CustomObject>
    <fields>
        <fullName>FMA_Review__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FMA Review</label>
        <referenceTo>FMA_History__c</referenceTo>
        <relationshipLabel>FMA Account Notes</relationshipLabel>
        <relationshipName>FMA_Account_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Financial_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Financial Account</label>
        <referenceTo>FinServ__FinancialAccount__c</referenceTo>
        <relationshipLabel>FMA Account Notes</relationshipLabel>
        <relationshipName>FMA_Account_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legacy_Created_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Legacy Created By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>FMA_Account_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legacy_Created_Date__c</fullName>
        <label>Legacy Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Legacy_ID__c</fullName>
        <externalId>true</externalId>
        <label>Legacy ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>FMA Account Note</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>FMA Account Note Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FMA Account Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>